# OpenAnsweringMachine

./: .gitignore  LICENSE  NOTICE.md  README.md  config.example.json
docs/: ARCHITECTURE.md  SUPPORTED_DONGLES.md
engine/firmware/: README.md
engine/overlay/platform/windows/: btstack_stdin_windows.c
engine/overlay/port/windows-winusb/: CMakeLists.txt
engine/src/: oam_engine.c  sco_demo_util.c  sco_demo_util.h
scripts/: run.ps1  setup.ps1
server/: server.py
tools/: tts.ps1
web/: app.js  index.html  style.css
